Fix content wrapper wrong margin

--- a/static/style.css
+++ b/static/style.css
@@ -106,8 +106,8 @@
 
   /* PAGE STYLES */
   .contentWrapper {
-      margin-top: 17.3px;
-      margin-bottom: 730px;
+      margin-top: 73px;
+      margin-bottom: 73px;
       display: block;
   }
 
